# Kerrigan

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yaml  deploy.yml
migrations/2024-08-22-024631_create_users/: down.sql  up.sql
migrations/2024-08-22-030456_create_tasks/: down.sql  up.sql
src/: main.rs  schema.rs
