[package]
name = "duke"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
tracing-subscriber = "0.2"
tracing-log = "0.2.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"

[[bin]]
name = "duke"
path = "src/main.rs"
